[package]
name = "async-mysql-proxy"
version = "0.1.0"
authors = ["Ivan Chepurnyi <ivan.chepurnyi@ecomdev.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.21"
tokio-util = "0.3.1"
futures-core = "0.3.5"
mysql_async = "0.24.0-alpha"
json = "0.12.4"
pin-project-lite = "0.1.7"